Modificações no HTMl

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 class="logo">Brasil</h1>
             <ul id="navegacao">
                 <li class="primeiro"><a id="home" href="index.html">Home</a></li>
-                <li><a id="brasil" href="brasil.html">Brasil</a></li>
+                <li><a id="brasil" href="index.html">Brasil</a></li>
                 <li><a id="internacional" href="internacional.html">Internacional</a></li>
                 <li><a id="economia" href="economia.html">Economia</a></li>
                 <li><a id="saude" href="saude.html">Saude</a></li>
@@ -57,7 +57,7 @@
                             <li>
                                 <a href="">
                                     <img src="Imagens/tecnologia.jpg" width="80">
-                                    <h3>Novas Tecnologias!</h3>
+                                    <h3>Mercado Financeiro</h3>
                                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                 </a>
                             </li>
@@ -65,7 +65,7 @@
                             <li>
                                 <a href="">
                                     <img src="Imagens/tecnologia.jpg" width="80">
-                                    <h3>Novas Tecnologias!</h3>
+                                    <h3>Meio Ambiente</h3>
                                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                 </a>
                             </li>
@@ -73,7 +73,7 @@
                             <li>
                                 <a href="">
                                     <img src="Imagens/tecnologia.jpg" width="80">
-                                    <h3>Novas Tecnologias!</h3>
+                                    <h3>Novas Tecnologias</h3>
                                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                 </a>
                             </li>
@@ -81,7 +81,7 @@
                             <li>
                                 <a href="">
                                     <img src="Imagens/tecnologia.jpg" width="80">
-                                    <h3>Novas Tecnologias!</h3>
+                                    <h3>Esportes</h3>
                                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                 </a>
                             </li>
