Nova alteração no HTML

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <li><a href="">André Carlos</a></li>
                         <li><a href="">Márcio Mello</a> </li>
                         <li><a href="">João Pedro</a></li>
-                        <li><a href="">Fernando Weiss</a></li>
+                        <li><a href="">Fernando SIlva</a></li>
                     </ul>
                 </div>
 
