--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <ul id="navegacao">
                 <li class="primeiro"><a id="home" href="index.html">Home</a></li>
                 <li><a id="brasil" href="index.html">Brasil</a></li>
-                <li><a id="internacional" href="internacional.html">Internacional</a></li>
-                <li><a id="economia" href="economia.html">Economia</a></li>
-                <li><a id="saude" href="saude.html">Saude</a></li>
-                <li><a id="ciencia" href="ciencia.html">Ciencia</a></li>
-                <li><a id="fotos" href="fotos.html">Fotos</a></li>
+                <li><a id="internacional" href="#">Internacional</a></li>
+                <li><a id="noticias-cidade.html" href="#">Economia</a></li>
+                <li><a id="saude" href="#">Saude</a></li>
+                <li><a id="ciencia" href="#">Ciencia</a></li>
+                <li><a id="fotos" href="#">Fotos</a></li>
             </ul>
         </div>
         <!--Fim Topo-->
